// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _accessKey="V" 1`] = `
<kol-input-number class="kol-input-number">
  <template shadowrootmode="open">
    <kol-input _accesskey="V" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="number">
      <span slot="label">
        Label
        <span aria-hidden="true" class="badge-text-hint">
          V
        </span>
      </span>
      <div slot="input">
        <input accesskey="V" autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" max="" min="" name="field" placeholder="Hier steht ein Platzhaltertext" type="number" value="">
      </div>
    </kol-input>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _alert=true 1`] = `
<kol-input-number _alert="" class="kol-input-number">
  <template shadowrootmode="open">
    <kol-input _alert="" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="number">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" max="" min="" name="field" placeholder="Hier steht ein Platzhaltertext" type="number" value="">
      </div>
    </kol-input>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _disabled=true 1`] = `
<kol-input-number class="kol-input-number">
  <template shadowrootmode="open">
    <kol-input _disabled="" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="number">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" disabled="" id="id-nonce" max="" min="" name="field" placeholder="Hier steht ein Platzhaltertext" type="number" value="">
      </div>
    </kol-input>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _hint="Hint" 1`] = `
<kol-input-number class="kol-input-number">
  <template shadowrootmode="open">
    <kol-input _hint="Hint" _id="id-nonce" _label="Label" _tooltipalign="top" class="number">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input aria-describedby="id-nonce-hint" autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" max="" min="" name="field" placeholder="Hier steht ein Platzhaltertext" type="number" value="">
      </div>
    </kol-input>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _icons={"left":{"icon":"codicon codicon-arrow-left"},"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-number class="kol-input-number">
  <template shadowrootmode="open">
    <kol-input _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="number">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" max="" min="" name="field" placeholder="Hier steht ein Platzhaltertext" type="number" value="">
      </div>
    </kol-input>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _icons={"left":{"icon":"codicon codicon-arrow-left"}} 1`] = `
<kol-input-number class="kol-input-number">
  <template shadowrootmode="open">
    <kol-input _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="number">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" max="" min="" name="field" placeholder="Hier steht ein Platzhaltertext" type="number" value="">
      </div>
    </kol-input>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _icons={"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-number class="kol-input-number">
  <template shadowrootmode="open">
    <kol-input _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="number">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" max="" min="" name="field" placeholder="Hier steht ein Platzhaltertext" type="number" value="">
      </div>
    </kol-input>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} _hideError=true 1`] = `
<kol-input-number _hide-error="" class="kol-input-number">
  <template shadowrootmode="open">
    <kol-input _hideerror="" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="number">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" max="" min="" name="field" placeholder="Hier steht ein Platzhaltertext" type="number" value="">
      </div>
    </kol-input>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} 1`] = `
<kol-input-number class="kol-input-number">
  <template shadowrootmode="open">
    <kol-input _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="number">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" max="" min="" name="field" placeholder="Hier steht ein Platzhaltertext" type="number" value="">
      </div>
    </kol-input>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _readOnly=true 1`] = `
<kol-input-number class="kol-input-number">
  <template shadowrootmode="open">
    <kol-input _hint="" _id="id-nonce" _label="Label" _readonly="" _tooltipalign="top" class="number">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" max="" min="" name="field" placeholder="Hier steht ein Platzhaltertext" readonly="" type="number" value="">
      </div>
    </kol-input>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _shortKey="S" 1`] = `
<kol-input-number class="kol-input-number">
  <template shadowrootmode="open">
    <kol-input _hint="" _id="id-nonce" _label="Label" _shortkey="S" _tooltipalign="top" class="number">
      <span slot="label">
        Label
        <span aria-hidden="true" class="badge-text-hint">
          S
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" max="" min="" name="field" placeholder="Hier steht ein Platzhaltertext" type="number" value="">
      </div>
    </kol-input>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _smartButton={"_icons":["codicon codicon-eye"],"_hideLabel":true,"_label":"einblenden"} 1`] = `
<kol-input-number class="kol-input-number">
  <template shadowrootmode="open">
    <kol-input _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="number">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" max="" min="" name="field" placeholder="Hier steht ein Platzhaltertext" type="number" value="">
      </div>
    </kol-input>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _suggestions=[1,2,3] _accessKey="V" 1`] = `
<kol-input-number class="kol-input-number">
  <template shadowrootmode="open">
    <kol-input _accesskey="V" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="number">
      <span slot="label">
        Label
        <span aria-hidden="true" class="badge-text-hint">
          V
        </span>
      </span>
      <div slot="input">
        <input accesskey="V" autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" max="" min="" name="field" placeholder="Hier steht ein Platzhaltertext" type="number" value="">
      </div>
    </kol-input>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _suggestions=[1,2,3] _alert=true 1`] = `
<kol-input-number _alert="" class="kol-input-number">
  <template shadowrootmode="open">
    <kol-input _alert="" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="number">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" max="" min="" name="field" placeholder="Hier steht ein Platzhaltertext" type="number" value="">
      </div>
    </kol-input>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _suggestions=[1,2,3] _disabled=true 1`] = `
<kol-input-number class="kol-input-number">
  <template shadowrootmode="open">
    <kol-input _disabled="" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="number">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" disabled="" id="id-nonce" list="id-nonce-list" max="" min="" name="field" placeholder="Hier steht ein Platzhaltertext" type="number" value="">
      </div>
    </kol-input>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _suggestions=[1,2,3] _hint="Hint" 1`] = `
<kol-input-number class="kol-input-number">
  <template shadowrootmode="open">
    <kol-input _hint="Hint" _id="id-nonce" _label="Label" _tooltipalign="top" class="number">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input aria-describedby="id-nonce-hint" autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" max="" min="" name="field" placeholder="Hier steht ein Platzhaltertext" type="number" value="">
      </div>
    </kol-input>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _suggestions=[1,2,3] _icons={"left":{"icon":"codicon codicon-arrow-left"},"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-number class="kol-input-number">
  <template shadowrootmode="open">
    <kol-input _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="number">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" max="" min="" name="field" placeholder="Hier steht ein Platzhaltertext" type="number" value="">
      </div>
    </kol-input>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _suggestions=[1,2,3] _icons={"left":{"icon":"codicon codicon-arrow-left"}} 1`] = `
<kol-input-number class="kol-input-number">
  <template shadowrootmode="open">
    <kol-input _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="number">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" max="" min="" name="field" placeholder="Hier steht ein Platzhaltertext" type="number" value="">
      </div>
    </kol-input>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _suggestions=[1,2,3] _icons={"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-number class="kol-input-number">
  <template shadowrootmode="open">
    <kol-input _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="number">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" max="" min="" name="field" placeholder="Hier steht ein Platzhaltertext" type="number" value="">
      </div>
    </kol-input>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _suggestions=[1,2,3] _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} _hideError=true 1`] = `
<kol-input-number _hide-error="" class="kol-input-number">
  <template shadowrootmode="open">
    <kol-input _hideerror="" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="number">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" max="" min="" name="field" placeholder="Hier steht ein Platzhaltertext" type="number" value="">
      </div>
    </kol-input>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _suggestions=[1,2,3] _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} 1`] = `
<kol-input-number class="kol-input-number">
  <template shadowrootmode="open">
    <kol-input _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="number">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" max="" min="" name="field" placeholder="Hier steht ein Platzhaltertext" type="number" value="">
      </div>
    </kol-input>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _suggestions=[1,2,3] _readOnly=true 1`] = `
<kol-input-number class="kol-input-number">
  <template shadowrootmode="open">
    <kol-input _hint="" _id="id-nonce" _label="Label" _readonly="" _tooltipalign="top" class="number">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" max="" min="" name="field" placeholder="Hier steht ein Platzhaltertext" readonly="" type="number" value="">
      </div>
    </kol-input>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _suggestions=[1,2,3] _shortKey="S" 1`] = `
<kol-input-number class="kol-input-number">
  <template shadowrootmode="open">
    <kol-input _hint="" _id="id-nonce" _label="Label" _shortkey="S" _tooltipalign="top" class="number">
      <span slot="label">
        Label
        <span aria-hidden="true" class="badge-text-hint">
          S
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" max="" min="" name="field" placeholder="Hier steht ein Platzhaltertext" type="number" value="">
      </div>
    </kol-input>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _suggestions=[1,2,3] _smartButton={"_icons":["codicon codicon-eye"],"_hideLabel":true,"_label":"einblenden"} 1`] = `
<kol-input-number class="kol-input-number">
  <template shadowrootmode="open">
    <kol-input _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="number">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" max="" min="" name="field" placeholder="Hier steht ein Platzhaltertext" type="number" value="">
      </div>
    </kol-input>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _suggestions=[1,2,3] _touched=true 1`] = `
<kol-input-number _touched="" class="kol-input-number">
  <template shadowrootmode="open">
    <kol-input _alert="" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" _touched="" class="number">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" max="" min="" name="field" placeholder="Hier steht ein Platzhaltertext" type="number" value="">
      </div>
    </kol-input>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _suggestions=[1,2,3] 1`] = `
<kol-input-number class="kol-input-number">
  <template shadowrootmode="open">
    <kol-input _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="number">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" max="" min="" name="field" placeholder="Hier steht ein Platzhaltertext" type="number" value="">
      </div>
    </kol-input>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _touched=true 1`] = `
<kol-input-number _touched="" class="kol-input-number">
  <template shadowrootmode="open">
    <kol-input _alert="" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" _touched="" class="number">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" max="" min="" name="field" placeholder="Hier steht ein Platzhaltertext" type="number" value="">
      </div>
    </kol-input>
  </template>
</kol-input-number>
`;

exports[`kol-input-number should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" 1`] = `
<kol-input-number class="kol-input-number">
  <template shadowrootmode="open">
    <kol-input _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="number">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" max="" min="" name="field" placeholder="Hier steht ein Platzhaltertext" type="number" value="">
      </div>
    </kol-input>
  </template>
</kol-input-number>
`;
